[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyfugue"
version = "0.0.1"
description = "A MUD client written in python"
authors = ["NimVek <NimVek@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

readme = "README.md"

repository = "https://github.com/NimVek/pyfugue"

classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Framework :: Twisted",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.8"
incremental = "^17.5.0"
Twisted = "^20.3.0"
pyOpenSSL = "^19.1.0"
service_identity = "^18.1.0"
appdirs = "^1.4.4"
toml = "^0.10.1"
urwid = { version = "^2.1.0", optional = true }
PyGObject = { version = "^3.36.1", optional = true }
sortedcontainers = "^2.2.2"

[tool.poetry.extras]
tui = [ "urwid" ]
gui = [ "PyGObject" ]

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.10.0"
pre-commit = "^2.5.1"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.971"
isort = "^5.0.2"
coveralls = "^2.0.0"

[tool.poetry.scripts]
pyfugue = "pyfugue:main"

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true

known_first_party = "pyfugue"
known_third_party = [ "twisted", "urwid" ]

[tool.black]
line-length = 88
