[metadata]
name = pyfugue
version = 0.0.1
description = A MUD client written in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NimVek/pyfugue
author = NimVek
author_email = NimVek@users.noreply.github.com
license = GPL
license_file = LICENSE
classifiers = file: classifiers.txt

[options]
install_requires =
	PyGObject
	Twisted
	urwid
packages =
	pyfugue
	pyfugue.command
	pyfugue.command.commands
	pyfugue.lib
	pyfugue.network
	pyfugue.network.options
	pyfugue.ui
	pyfugue.ui.gtk3
	pyfugue.ui.urwid
	pyfugue.ui.urwid.tools
	pyfugue.ui.urwid.widget

[options.entry_points]
console_scripts =
	pyfugue = pyfugue:main
